--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "体脂率计算器"
+rootProject.name = "体脂钳计算器"
 include ':app'
